--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "aws-sdk": "^2.900.0",
+    "bluebird": "^3.7.2",
+    "uuid": "^8.3.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
