--- a/serverless.yml
+++ b/serverless.yml
@@ -16,7 +16,7 @@ provider:
       - dynamodb:PutItem
       - dynamodb:UpdateItem
       - dynamodb:DeleteItem
-    Resource: arn:aws:dynamodb:us-east-1:529198180535:table/tcc    
+    Resource: arn:aws:dynamodb:us-east-1:529198180535:table/tcc3
 
 
 
